traces/bug_591.txt
src/fflib/lgmesh.cpp:864: error: DEAD_STORE
  The value written to &cH2 (type double) is never used.
Showing all 1 steps of the trace


src/fflib/lgmesh.cpp:864:5: Write of unused value
862.     Metric Mhmax(hmax);
863.       double  ch2=2/(hmax*hmax);
864.       double  cH2=2/(hmin*hmin);
           ^
865.       
866.     for ( iv=0;iv<Th.nbv;iv++) 
